--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pr-br">
+<html lang="pr-br" class="w-full h-full">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,8 +7,8 @@
       resumo-de-resultados
     </title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="w-full h-full ">
+    <div id="root"  class="w-full h-full overflow-hidden"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
