--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </title>
   </head>
   <body class="w-full h-full ">
-    <div id="root"  class="w-full h-full overflow-hidden"></div>
+    <div id="root"  class="w-full h-full"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
